<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- Color Picker strings -->
    <string name="download_color_picker">Download Color Picker</string>
    <string name="color_picker_modularization_explanation">The color picker is a separate small, free app.  Please download it now from the Market or the OpenIntents website.</string>
    <string name="download_color_picker_market">Market download</string>
    <string name="download_color_picker_web">Web download</string>
   


    <string name="upload">Upload</string>
    <string name="start_upload">Start Upload</string>
    <string name="picking_ellipsis">Picking...</string>

    <string name="flickr_tags">Photo Tag Browser</string>
    <string name="release_notes">Release Notes</string>

    <string name="about_text">Based on <a href="http://labs.ideeinc.com/multicolr/">Multicolr Search Lab</a></string>
    

	<string name="no_results">There are no results to display.</string>
    <string name="empty_no_items">No items to display.</string>


    <string name="not_implemented_message">Not implemented.</string>


    
    <string name="edittext_hint_enter_title">Enter title</string>
    <string name="edittext_hint_enter_description">Enter description</string>
    
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    
    <string name="working_message">working...</string>

    <string name="menu_go_to_page">Go to page</string>
    <string name="menu_get_data">Get data</string>
    <string name="menu_back">Back</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_no_sort">Don\'t sort</string>
    <string name="menu_taxo_rank">by Rank</string>
    <string name="menu_region">by Region</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Import Taxonomy</string>
    <string name="menu_purge">Purge Taxonomy</string>
    <string name="menu_about">About</string>
    <string name="menu_crop">Crop</string>
    <string name="menu_clear">Clear</string>
	<string name="menu_50_50">50/50</string>

	<string name="menu_clear_missing">Clear missing</string>

    

    <string name="taxonomic_rank">List by taxonomic rank:</string>
    <string name="taxonomic_region">List by region:</string>
    


    <string name="already_downloaded">Item is already downloaded.</string>


    <string name="title_acquire_on_open">Acquire on open</string>
    <string name="summary_acquire_on_open">Begin acquisition when activity is opened</string>


    <string name="title_record_acquisition">Record acquisition</string>
    <string name="summary_record_acquisition">Record acquisition to log</string>

    <string name="title_quit_on_fix">Quit on fix</string>
    <string name="summary_quit_on_fix">Quit activity when fix obtained</string>




    <string name="title_enable_realtime_search">Enable realtime search</string>
    <string name="summary_enable_realtime_search">Updates search results while you type</string>




    
<string name="find">Find</string>
<string name="default_search">empire state building</string>

    <string name="ratingbar_rating">Rating:</string>
    <string name="gallery_2_text">Testing</string>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <string name="hello">Hello, Ubuntu</string><string name="goodbye">Server Address:</string>
    <string name="app_name">BettrFlickr</string>
    
    
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Server connection</string>
    
    
    <string name="title_toggle_preference">Toggle preference</string>
    <string name="summary_toggle_preference">This is a toggle button</string>
    
    
    <string name="title_edittext_preference">Server address</string>
    <string name="summary_edittext_preference">Set hostname or IP address</string>
    <string name="dialog_title_edittext_preference">Enter hostname or IP address</string>
    <string name="default_hostname_string">192.168.0.9</string>
    
    <string name="title_editint_preference">Server port</string>
    <string name="summary_editint_preference">Set port</string>
    <string name="dialog_title_editint_preference">Enter port</string>
    <string name="default_port_number">46645</string>

    <string name="title_list_preference">Previously connected servers</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    
<string name="textflinger_button_title">Fling text</string>

    
    <!-- EULA -->
    <string name="eula_title">License agreement</string>
    <string name="eula_adc2_title">License agreement</string>
    
    
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Don\'t accept</string>

    <string name="disclaimer_title">Disclaimer</string>    
    <string name="disclaimer_accept">Accept</string>    
    
    
    
</resources>

